fixed issues with horizontal scrollbars; unified styling of settings components

--- a/src/app/settings/components/account/account.component.css
+++ b/src/app/settings/components/account/account.component.css
@@ -16,7 +16,7 @@
   color: rgba(0, 0, 0, 0.54);
 }
 
-mat-card.scrollable {
+mat-card {
   min-height: 100%;
   overflow-y: scroll;
 }
@@ -28,4 +28,18 @@ mat-input-container {
 .mat-card-title {
   font-size: 24px;
   font-weight: 400;
+}
+
+.upper-space {
+  margin-top: 15px;
+}
+
+.mat-card-actions {
+  margin-right: 0;
+}
+
+.mat-card-actions .mat-button:first-child,
+.mat-card-actions .mat-raised-button:first-child {
+  margin-left: 16px;
+  margin-right: 0;
 }
